<resources>
    <string name="app_name">Direct Me</string>

    <string name="signin">Sign In Using Google</string>
    <string name="new_user">New User? Sign Up Here!!!</string>

    <string name="enter_name">Enter Your Name</string>
    <string name="enter_email">Enter Your E-Mail</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>

    <string name="google_maps_key">AIzaSyBPFLxUS38OVBy6Na5fzroAMBo-Ka8-CKs</string>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_activity_test_poly_line">Map</string>

    <string name="routes_setTextViewText">Route Options</string>
    <string name="routes_fileName">Routes</string>
</resources>
