<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <ImageView
            android:id="@+id/register_form_app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round"
            />
        <EditText
            android:id="@+id/enter_your_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/enter_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:inputType="textPassword"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gender:"
                android:textSize="17dp"
                android:textColor="#000"
                android:layout_gravity="center"
                android:gravity="center"
                />

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#000"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:id="@+id/radio_female"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#000"
                />

            <RadioButton
                android:id="@+id/radio_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Other"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#000"
                />


        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:text="@string/register"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textSize="15sp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>