<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#CFCFCF"
        >

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:layout_marginTop="0dp"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#000"
            />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="100dp"
            />

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/new_user"
            android:textColor="#283593"
            android:focusable="true" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>